# entropy

./: .gitignore  Cargo.toml  README.md
data/: operation-0.txt  operation-1.txt  operation-10.txt  operation-100.txt  operation-101.txt  operation-102.txt  operation-103.txt  operation-104.txt  operation-105.txt  operation-106.txt  operation-107.txt  operation-108.txt  operation-109.txt  operation-11.txt  operation-110.txt  operation-111.txt  operation-112.txt  operation-113.txt  operation-114.txt  operation-115.txt  operation-116.txt  operation-117.txt  operation-118.txt  operation-12.txt  operation-13.txt  operation-14.txt  operation-15.txt  operation-16.txt  operation-17.txt  operation-18.txt  operation-19.txt  operation-2.txt  operation-20.txt  operation-21.txt  operation-22.txt  operation-23.txt  operation-24.txt  operation-25.txt  operation-26.txt  operation-27.txt  (+79 more)
examples/: bench_client.rs  bench_encoder.rs  panic_server.rs
notebooks/: concurrent.ipynb  operation.ipynb  scalable.ipynb  scale.ipynb
scripts/: common.py  data_name.sh  prepare_hosts.py  put_get.py  repair.py  run_service.sh  run_service_repair.py  service_ssh.sh  service_upload_artifact.sh  spawn_monitor.py  spawn_monitor_remote.py  stop_peers.sh  stop_service.sh  terraform_hosts.py
src/: app.rs  app2.rs  chunk.rs  common.rs  main.rs  peer.rs  plaza.rs
terraform/: main.tf
terraform/group/: main.tf
terraform/region/: main.tf
wirehair/: .gitignore  Cargo.toml  build.rs  playbook.yml
wirehair/examples/: coding_bench.rs
wirehair/src/: lib.rs
wirehair/terraform/: .terraform.lock.hcl  (+2 more)
